k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rental-service
  labels:
    name: rental-service
    purpose: microservices-backend
